<resources>
	<string name="show_warnings_title">Show alarms&#8230;</string>
	<string name="show_warnings_descr">Show speed limits, speed cameras, speed bumps, and other warnings</string>
	<string name="use_compass_navigation_descr">Use the compass when no heading is detected otherwise</string>
	<string name="use_compass_navigation">Use compass</string>
	<string name="avoid_motorway">Avoid motorways</string>
	<string name="auto_zoom_map_descr">Auto zoom map according to your speed (while map is synchronized with current position)</string>
	<string name="auto_zoom_map">Auto zoom map</string>
	<string name="tip_recent_changes_0_8_3_t">Changes in 0.8.3 :
		\n\t* Improved route guidance
		\n\t* Avoid motorways option
		\n\t* Cycleway=track display
		\n\t* better UI finish (icons)
		\n\t* Some bug fixes
	</string>
	<string name="snap_to_road_descr">Snap position to roads during navigation</string>
	<string name="snap_to_road">Snap to road</string>
	<string name="tip_recent_changes_0_8_2_t">Changes in 0.8.2 :
		\n\t* Improved Routing
		\n\t* Dynamic map widgets
		\n\t* Map settings moved to map screen
		\n\t* Lock screen button with logging services
		\n\t* Fixed Arabic, Kannada scripting and RTL languages 
	</string>
	<string name="osmand_short_description_80_chars">OsmAnd is an open source navigation application for offline and online maps</string>
	<string name="osmand_long_description_1000_chars">
		OsmAnd (OSM Automated Navigation Directions)

		OsmAnd is an open source navigation application with access to a wide variety of global OpenStreetMap (OSM) data. All map data (vector or tile maps) can be stored on the phone memory card for offline usage. OsmAnd also offers offline and online routing functionality including turn-by-turn voice guidance.

		Some of the core features:
		- Complete offline functionality (store downloaded vector or tile maps in a selectable folder)
		- Compact offline vector maps for the whole world available
		- Download of country or region maps directly from the app 
		- Overlay of several map layers possible, like GPX or navigation tracks, Points of Interest, favorites, contour lines, public transportation stops, additional maps with customizable transparency
		- Offline search for addresses and places (POIs)
		- Offline routing for short distances (experimental)
		- Car, bicycle, and pedestrian modes with:
		-  optional automated day/night view switching
		-  optional speed-dependent map zooming
		-  optional map alignment according to compass or direction of motion
		-  optional lane guidance, speed limit display, recorded and TTS voices

		Limitations of this free version of OsmAnd:
		- Number of map downloads limited
		- No access to Wikipedia offline POIs

		OsmAnd is actively being developed and our project and its further progress relies on financial contributions to fund the development and testdriving new functionality. Please consider buying OsmAnd+, or funding specific new features or making a general donation on osmand.net.
	</string>
	<string name="osmand_plus_short_description_80_chars">OsmAnd is an open source navigation application for offline and online maps</string>
	<string name="osmand_plus_long_description_1000_chars">
		OsmAnd+ (OSM Automated Navigation Directions)

		OsmAnd+ is an open source navigation application with access to a wide variety of global OpenStreetMap (OSM) data. All map data (vector or tile maps) can be stored on the phone memory card for offline usage. OsmAnd also offers offline and online routing functionality including turn-by-turn voice guidance.

		OsmAnd+ is the paid application version, by buying it you support the project, fund the development of new features, and receive the latest updates.

		Some of the core features:
		- Complete offline functionality (store downloaded vector or tile maps in a selectable folder)
		- Compact offline vector maps for the whole world available
		- Unlimited downloading of country or region maps directly from the app 
		- Offline Wikipedia feature (download Wikipedia POIs), great for sightseeing
		- Overlay of several map layers possible, like GPX or navigation tracks, Points of Interest, favorites, contour lines, public transportation stops, additional maps with customizable transparency
		- Offline search for addresses and places (POIs)
		- Offline routing for short distances (experimental)
		- Car, bicycle, and pedestrian modes with:
		-  optional automated day/night view switching
		-  optional speed-dependent map zooming
		-  optional map alignment according to compass or direction of motion
		-  optional lane guidance, speed limit display, recorded and TTS voices
	</string>
	<string name="tip_update_index">Update of Offline Data</string>
	<string name="tip_update_index_t">\tHaving up-to-date map data is essential. OsmAnd provides a download manager which can check for available offline data updates.
		\n\tTo check for updates go to \'Settings\' -> \'Offline data\' -> \'Download offline data\'. After region list is retrieved from the internet, you can select option \'Menu\' -> \'Filter downloaded\' to indicate updates only for data already on your device.
		\n\tThe availability of updates  is depicted by the following colors:
		\n\t\'Green\' - indicates data files identical on device and server
		\n\t\'Blue\' - indicates available updates on server
		\n\t\'Dark green/blue\' - likewise indicate data de-activated on the device</string>
	<string name="filterpoi_activity">Create POI filter</string>
	<string name="recalculate_route_to_your_location">Transport mode:</string>
	<string name="select_navigation_mode">Select transport mode</string>
	<string name="monitor_preferences">Tracking</string>
	<string name="day_night_info_description">Sunrise : %1$s \nSunset : %2$s</string>
	<string name="day_night_info">Day/night info</string>
	<string name="map_widget_day_night">Day/night map</string>
	<string name="map_widget_vector_attributes">Rendering attributes:</string>
	<string name="map_widget_renderer">Rendering style</string>
	<string name="live_monitoring_mode_off">Start\n live tracking</string>
	<string name="live_monitoring_mode_on">Stop\n live tracking</string>
	<string name="position_on_map_descr">Choose location of position marker on the map</string>
	<string name="position_on_map">Position marker</string>
	<string name="layer_map_appearance">Configure screen&#8230;</string>
	<string name="show_lanes">Show lanes</string>
	<string name="avoid_unpaved">Avoid unpaved roads</string>
	<string name="avoid_ferries">Avoid ferries</string>
	<string name="avoid_in_routing_title">Avoid&#8230;</string>
	<string name="avoid_in_routing_descr">Avoid toll roads, unpaved, ferries</string>
	<string name="map_widget_fluorescent">Fluorescent routes</string>
	<string name="map_widget_show_ruler">Ruler</string>
	<string name="map_widget_appearance">Miscellaneous:</string>
	<string name="map_widget_view_direction">Viewing direction</string>
	<string name="map_widget_transparent">Transparent skin</string>
	<string name="monitoring_mode_off">Record GPX</string>
	<string name="monitoring_mode_on">Stop\n GPX rec.</string>
	<string name="bg_service_sleep_mode_off">Enable\n sleep mode</string>
	<string name="bg_service_sleep_mode_on">Stop\n sleep mode</string>
	<string name="gps_wakeup_interval">GPS wake-up interval: %s</string>
	<string name="int_continuosly">Continuous</string>
	<string name="screen_is_locked">To unlock screen press lock icon</string>
	<string name="map_widget_top_text">Street name</string>
	<string name="map_widget_config">Configure screen</string>
	<string name="map_widget_map_select">Map source</string>
	<string name="map_widget_back_to_loc">Where am I</string>
	<string name="map_widget_lock_screen">Lock screen</string>
	<string name="map_widget_compass">Compass</string>
	<string name="map_widget_top_stack">Status bar:</string>
	<string name="map_widget_reset">Reset to default</string>
	<string name="map_widget_right_stack">Right panel:</string>
	<string name="map_widget_left_stack">Left panel:</string>
	<string name="map_widget_parking">Parking</string>
	<string name="map_widget_monitoring">Tracking</string>
	<string name="map_widget_speed">Speed</string>
	<string name="map_widget_distance">Target</string>
	<string name="map_widget_altitude">Altitude</string>
	<string name="map_widget_time">Time to go</string>
	<string name="map_widget_next_turn">Next turn</string>
	<string name="map_widget_next_turn_small">Next turn (small)</string>
	<string name="map_widget_next_next_turn">Second next turn</string>
	<string name="map_widget_mini_route">Mini route map</string>
	<string name="left_side_navigation">Left-hand driving</string>
	<string name="left_side_navigation_descr">Select for countries with left-hand traffic</string>
	<string name="index_settings_descr">Download, view details, and manage offline maps</string>
	<string name="prefs_plugins_descr">Plugins enable expert mode settings and provide extra functionality like tile maps, tracking, sleep mode operation, accessibility settings, and others.</string>
	<string name="prefs_plugins">Plugin Manager</string>
	<string name="support_new_features">Support new features</string>
	<string name="live_monitoring_descr">Send tracking to a specified web service</string>
	<string name="live_monitoring">Online live tracking</string>
	<string name="live_monitoring_interval_descr">Specify live tracking interval</string>
	<string name="live_monitoring_interval">Live tracking interval</string>
	<string name="live_monitoring_url_descr">Specify the web address with parameter syntax : lat={0}, lon={1}, timestamp={2}, hdop={3}, altitude={4}, speed={5}</string>
	<string name="live_monitoring_url">Live tracking web address</string>
	<string name="routing_settings_descr">Specify navigation options</string>
	<string name="index_settings">Offline Data (Download)</string>
	<string name="choose_auto_follow_route">Auto-center map view</string>
	<string name="choose_auto_follow_route_descr">Time until map view synchronizes with current position</string>
	<string name="preferred_locale_descr">Select display language</string>
	<string name="preferred_locale">Display language</string>
	<string name="unit_of_length_descr">Change units of length and speed</string>
	<string name="unit_of_length">Unit of measure</string>
	<string name="fast_route_mode">Fastest route</string>
	<string name="fast_route_mode_descr">Enable to calculate fastest route or disable for shortest route </string>
	<string name="voice_provider_descr">Select voice guidance for navigation</string>
	<string name="voice_provider">Voice guidance</string>
	<string name="map_screen_orientation">Screen orientation</string>
	<string name="map_screen_orientation_descr">Portrait, landscape, or device</string>
	<string name="router_service_descr">Choose an online or offline navigation service</string>
	<string name="router_service">Navigation service</string>
	<string name="save_current_track_descr">Save current track to SD now</string>
	<string name="save_current_track">Save current GPX track</string>
	<string name="save_track_interval">Logging interval</string>
	<string name="save_track_interval_descr">Choose positioning interval for tracks</string>
	<string name="save_track_to_gpx_descrp">Tracks will be saved to track directory grouped by days</string>
	<string name="save_track_to_gpx">Log track to GPX file</string>
	<string name="use_english_names_descr">Select between native and English names</string>
	<string name="use_english_names">Use English names in maps</string>
	<string name="tracking_settings_descr">Tracking options</string>
	<string name="tracking_settings">Tracking</string>
	<string name="misc_settings_descr">Misc description</string>
	<string name="misc_settings">Misc</string>
	<string name="enable_sleep_mode">enable sleep mode</string>
	<string name="Common">Common</string>
	<string name="enable">enable</string>
</resources>