<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:layout="@layout/settings_header_transportation_mode">

    <Preference
        android:key="local_indexes"
        android:summary="@string/index_settings_descr"
        android:title="@string/index_settings" >
    </Preference>
    <!--
	<PreferenceCategory android:title="@string/profile_settings" android:key="profile_dep_cat">
		<ListPreference android:summary="@string/settings_preset_descr" android:title="@string/settings_preset" android:key="application_mode"></ListPreference>
		<ListPreference android:key="rotate_map" android:title="@string/rotate_map_to_bearing" android:summary="@string/rotate_map_to_bearing_descr"></ListPreference>
    -->
    <PreferenceScreen
        android:key="routing_settings"
        android:summary="@string/routing_settings_descr" >
        <CheckBoxPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="left_side_navigation"
            android:summary="@string/left_side_navigation_descr"
            android:title="@string/left_side_navigation" >
            >
        </CheckBoxPreference>

        <ListPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="router_service"
            android:summary="@string/router_service_descr"
            android:title="@string/router_service" >
        </ListPreference>

        <CheckBoxPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="fast_route_mode"
            android:summary="@string/fast_route_mode_descr"
            android:title="@string/fast_route_mode" >
            >
        </CheckBoxPreference>

        <ListPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="voice_provider"
            android:summary="@string/voice_provider_descr"
            android:title="@string/voice_provider" >
            >
        </ListPreference>
        <ListPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="auto_follow_route"
            android:summary="@string/choose_auto_follow_route_descr"
            android:title="@string/choose_auto_follow_route" >
            >
        </ListPreference>

        <CheckBoxPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="auto_zoom_map"
            android:summary="@string/auto_zoom_map_descr"
            android:title="@string/auto_zoom_map" >
            >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="snap_to_road"
            android:summary="@string/snap_to_road_descr"
            android:title="@string/snap_to_road" >
            >
        </CheckBoxPreference>

        <Preference
            android:icon="@drawable/transportation_mode_icon"
            android:key="show_routing_alarms"
            android:summary="@string/show_warnings_descr"
            android:title="@string/show_warnings_title" >
            >
        </Preference>
        <Preference
            android:icon="@drawable/transportation_mode_icon"
            android:key="avoid_in_routing"
            android:summary="@string/avoid_in_routing_descr"
            android:title="@string/avoid_in_routing_title" >
            >
        </Preference>

        <CheckBoxPreference
            android:icon="@drawable/transportation_mode_icon"
            android:key="use_compass_navigation"
            android:summary="@string/use_compass_navigation_descr"
            android:title="@string/use_compass_navigation" >
        </CheckBoxPreference>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="tracking_settings"
        android:summary="@string/tracking_settings_descr"
        android:title="@string/tracking_settings" >
        <PreferenceCategory android:title="@string/save_track_to_gpx" >
            <CheckBoxPreference
                android:icon="@drawable/transportation_mode_icon"
                android:key="save_track_to_gpx"
                android:summary="@string/save_track_to_gpx_descrp"
                android:title="@string/enable" >
            </CheckBoxPreference>
            <Preference
                android:icon="@drawable/transportation_mode_none_icon"
                android:key="save_current_track"
                android:summary="@string/save_current_track_descr"
                android:title="@string/save_current_track" >
            </Preference>
            <Preference
                android:icon="@drawable/transportation_mode_icon"
                android:key="save_track_interval"
                android:summary="@string/save_track_interval_descr"
                android:title="@string/save_track_interval" >
            </Preference>
        </PreferenceCategory>
        <PreferenceCategory
            android:key="@string/live_monitoring"
            android:title="@string/live_monitoring" >
            <CheckBoxPreference
                android:icon="@drawable/transportation_mode_icon"
                android:summary="@string/live_monitoring_descr"
                android:title="@string/enable" />
            <Preference
                android:icon="@drawable/transportation_mode_icon"
                android:key="@string/live_monitoring_interval"
                android:summary="@string/live_monitoring_interval_descr"
                android:title="@string/live_monitoring_interval" />
            <Preference
                android:icon="@drawable/transportation_mode_none_icon"
                android:key="@string/live_monitoring_url"
                android:summary="@string/live_monitoring_url_descr"
                android:title="@string/live_monitoring_url" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/Common" >
            <CheckBoxPreference
                android:icon="@drawable/transportation_mode_icon"
                android:key="@string/bg_service_sleep_mode_off"
                android:title="@string/enable_sleep_mode" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="misc_settings"
        android:summary="@string/misc_settings_descr"
        android:title="@string/misc_settings" >
        <ListPreference
            android:key="map_screen_orientation"
            android:summary="@string/map_screen_orientation_descr"
            android:title="@string/map_screen_orientation" >
        </ListPreference>
        <ListPreference
            android:key="preferred_locale"
            android:summary="@string/preferred_locale_descr"
            android:title="@string/preferred_locale" >
        </ListPreference>

        <CheckBoxPreference
            android:key="use_english_names"
            android:summary="@string/use_english_names_descr"
            android:title="@string/use_english_names" >
        </CheckBoxPreference>

        <ListPreference
            android:key="default_metric_system"
            android:summary="@string/unit_of_length_descr"
            android:title="@string/unit_of_length" >
        </ListPreference>
    </PreferenceScreen>

    <Preference
        android:key="plugins"
        android:summary="@string/prefs_plugins_descr"
        android:title="@string/prefs_plugins" >
    </Preference>
    <Preference
        android:key="bidforfix"
        android:title="@string/support_new_features" >
    </Preference>

</PreferenceScreen>